--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Jonathan Whitney
 email: jonathan.a.whitney@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal website for Jonathan Whitney, Digital Developer
-baseurl: ""
+baseurl: "/jw-website"
 url: "http://jonathanawhitney.com"
 twitter_username: jwhitney64
 github_username:  jawhitney
